# automation_check_appointment_visa

./: pyproject.toml
src/: main.py
src/services/: appointment.py  basic.py  notification.py
